2007-09-29  Jonathan Wakely  <jwakely.gcc@gmail.com>

	* docs/html/Makefile: Follow up to libstdc++/14991, remove target.

2007-09-28  Benjamin Kosnik  <bkoz@redhat.com>

	* include/parallel/algorithmfwd.h: Spacing.
	* include/parallel/tags.h: Correct comment.
	
	* testsuite/Makefile.am (AM_MAKEFLAGS, AM_RUNTESTFLAGS): Remove.
	* testsuite/Makefile.in: Regenerate.
	
2007-09-27  Benjamin Kosnik  <bkoz@redhat.com>

	* testsuite/util/testsuite_hooks.cc (set_memory_limits): Adjust
	x86_64 virtual memory setting for libgomp.
	
2007-09-26  Benjamin Kosnik  <bkoz@redhat.com>

	* include/bits/stl_algo.h: Add return type information to comments.
	* include/bits/algorithmfwd.h: Formatting.
	* testsuite/util/testsuite_hooks.h (NonDefaultConstructible): Move..
	* testsuite/util/testsuite_api.h: ...here. Add necessary operators
	for use in testing chapters 25 and 26.
	* testsuite/util/testsuite_character.h: Same.

	* testsuite/25_algorithms/*/requirements/explicit_instantiation/
	2.cc, pod.cc: New.

	* testsuite/26_numerics/accumulate, adjacent_difference, inner_product,
	partial_sum/requirements/explicit_instantiation/2.cc, pod.cc: New.
	
	* testsuite/26_numerics/numeric_arrays/*: Move contents into
	testsuite/26_numerics.

	* testsuite/26_numerics/numeric_operations: Same.
	
	* testsuite/23_containers/*/requirements/explicit_instantiation/2.cc:
	Adjust includes from testsuite_eh.h to testsuite_api.h.

2007-09-25  Richard Sandiford  <rsandifo@nildram.co.uk>

	* testsuite/lib/libstdc++.exp (check_v3_target_fileio): Test lseek.

2007-09-18  Benjamin Kosnik  <bkoz@redhat.com>
	    Chalathip Thumkanon  <chalathip@gmail.com>

	PR libstdc++/32819
	PR libstdc++/32822
	* docs/html/ext/pb_ds/hash_based_containers.html: Correct.
	
2007-09-17  Benjamin Kosnik  <bkoz@redhat.com>

	* configure.host: Set atomic_flags on i486.

	* include/Makefile.am: Remove parallel-mode pch.	
	* include/Makefile.in: Regenerate.

	* testsuite/lib/libstdc++.exp: Set ld_library_flags for libgomp if
	present.
