@@ -179,27 +179,27 @@
      <li>Insertion. Over multiple iterations, various STL container
      objects have elements inserted to some maximum amount. A variety
      of allocators are tested.  
-     Test source <a
-     href="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libstdc%2b%2b-v3/testsuite/performance/20_util/allocator/insert.cc?only_with_tag=MAIN">here.</a>
+     Test source for <a
+     href="http://gcc.gnu.org/viewcvs/trunk/libstdc%2B%2B-v3/testsuite/performance/23_containers/insert/sequence.cc?view=markup">sequence</a>
+     and <a
+     href="http://gcc.gnu.org/viewcvs/trunk/libstdc%2B%2B-v3/testsuite/performance/23_containers/insert/associative.cc?view=markup">associative</a>
+     containers.
      </li>
 
-     <li>Insertion, clear, and re-insertion in a multi-threaded
-     environment.  Over multiple iterations, several threads are
-     started that insert elements into a STL container, then assign a
-     null instance of the same type to clear memory, and then
-     re-insert the same number of elements. Several STL containers and
-     multiple allocators are tested. This test shows the ability of
-     the allocator to reclaim memory on a pre-thread basis, as well as
-     measuring thread contention for memory resources. 
+     <li>Insertion and erasure in a multi-threaded environment.
+     This test shows the ability of the allocator to reclaim memory
+     on a pre-thread basis, as well as measuring thread contention
+     for memory resources. 
      Test source 
-    <a href="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libstdc%2b%2b-v3/testsuite/performance/20_util/allocator/insert_insert.cc"> 
-    here.</a>
+    <a href="http://gcc.gnu.org/viewcvs/trunk/libstdc%2B%2B-v3/testsuite/performance/23_containers/insert_erase/associative.cc?view=markup">here</a>.
      </li>
 
      <li>A threaded producer/consumer model.
-     Test source 
-    <a href="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libstdc%2b%2b-v3/testsuite/performance/20_util/allocator/producer_consumer.cc"> 
-    here.</a>
+     Test source for
+     <a href="http://gcc.gnu.org/viewcvs/trunk/libstdc%2B%2B-v3/testsuite/performance/23_containers/producer_consumer/sequence.cc?view=markup">sequence</a>
+     and 
+     <a href="http://gcc.gnu.org/viewcvs/trunk/libstdc%2B%2B-v3/testsuite/performance/23_containers/producer_consumer/associative.cc?view=markup">associative</a>
+     containers.
      </li>
    </ul>
 
@@ -490,7 +490,7 @@
    </p>
 
    <p>
-   Berger, Emery with Ben Zorn & Kathryn McKinley, OOPSLA 2002
+   Berger, Emery with Ben Zorn &amp; Kathryn McKinley, OOPSLA 2002
    <a href="http://www.cs.umass.edu/~emery/pubs/berger-oopsla2002.pdf">Reconsidering Custom Memory Allocation</a>
    </p>
 
