@@ -244,7 +244,7 @@
 <h2><a name="5">Contributor-Specific Information</a></h2>
 <ul>
    <li><a href="17_intro/contribute.html">Contributor checklist</a></li>
-   <li><a href="http://gcc.gnu.org/cvswrite.html">Getting CVS write access
+   <li><a href="http://gcc.gnu.org/svnwrite.html">Getting SVN write access
        (look for &quot;Write after approval&quot;)</a></li>
    <li><a href="17_intro/BADNAMES">BADNAMES</a>
        - names to avoid because of potential collisions</li>
