@@ -36,7 +36,7 @@ In this implementation the header names are prefixed by
 </p>
 
 <p>
-This page describes the TR1 support in mainline GCC CVS, not in any particular
+This page describes the TR1 support in mainline GCC SVN, not in any particular
 release.
 </p>
 
