@@ -319,7 +319,7 @@ cat 27_io/objects/char/3_xin.in | a.out
    <p>
     All files are copyright the FSF, and GPL'd: this is very
     important.  The first copyright year should correspond to the date
-    the file was checked in to CVS.
+    the file was checked in to SVN.
    </p>
 
    <p>
